# vs-bmdegrain

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
source/: bmdegrain.cpp
